# grpc-demo

./: .gitmodules  CMakeLists.txt  Makefile  README.md
include/server/: server.h
protobuf/: grpc_server.proto
src/: main.cpp
src/protobuf/: grpc_server.grpc.pb.cc  grpc_server.grpc.pb.h  grpc_server.pb.cc  grpc_server.pb.h
src/server/: server.cpp
